--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(JIT)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(JIT main.cpp)
+add_executable(JIT main.cpp
+        include/jit-tools/jit-tools.h
+        src/jit-tools/jit-tools.cpp)
